--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeeMeet">
         <activity
+            android:name=".ui.registration.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.SeeMeet.NoActionBar" />
+        <activity
             android:name=".ui.friend.FriendActivity"
             android:exported="true" />
         <activity
             android:name=".ui.apply.ApplyActivity"
             android:exported="true" />
         <activity
-            android:name="org.seemeet.seemeet.ui.registration.LoginActivity"
+            android:name=".ui.registration.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.seemeet.seemeet.MainActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
