--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //viewpager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
