[FEAT] #17 메인뷰 내 리싸이클러뷰 클릭 시 상세뷰 이동 + a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeeMeet">
         <activity
+            android:name=".ui.detail.DetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.registration.RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
