[ADD] Calendar library dependency

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        maven { url "https://jitpack.io" }
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
