--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+
+    //viewpager
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
 
     //viewModel
@@ -80,5 +84,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-
+    //Calendar
+    implementation 'com.github.kizitonwose:CalendarView:1.0.4'
 }
