[CHORE] 리싸이클러뷰 선택 관련 라이브러리 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,8 @@ dependencies {
 
     //Calendar
     implementation 'com.github.kizitonwose:CalendarView:1.0.4'
+
+    //Recycler Selection
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.2.0-alpha01'
 }
