--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeeMeet">
         <activity
+            android:name=".ui.apply.SecondApplyActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.receive.ReceiveActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="false" />
@@ -37,7 +38,6 @@
         <activity
             android:name=".ui.registration.LoginActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
