--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.seemeet.seemeet" >
+    package="org.seemeet.seemeet">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_logo_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SeeMeet" >
+        android:theme="@style/Theme.SeeMeet">
         <activity
             android:name=".ui.send.SendActivity"
             android:exported="false" />
@@ -17,7 +17,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.receive.ReceiveActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.detail.DetailActivity"
             android:exported="false" />
@@ -37,16 +37,16 @@
             android:exported="true" />
         <activity
             android:name=".ui.apply.ApplyActivity"
-            android:exported="true" />
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"
+            android:theme="@style/SplashTheme"/>
         <activity android:name=".ui.registration.LoginActivity" />
     </application>
 
