--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 buildscript {
     repositories {
         google()
-        maven { url "https://jitpack.io" }
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
