--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'kotlin-kapt'
 }
 
+Properties properties = new Properties()
+properties.load(new FileInputStream(rootProject.file("local.properties")))
+
 android {
     compileSdk 31
 
@@ -16,6 +19,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+
+        buildConfigField ("String", "KAKAO_APP_KEY", properties.get('KAKAO_APP_KEY'))
+        manifestPlaceholders = [KAKAO_APP_KEY: properties.get('KAKAO_APP_KEY')]
     }
 
     buildFeatures {
