--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.SeeMeet"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.registration.RegisterNameIdActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.registration.LoginMainActivity"
             android:exported="false" />
         <activity
@@ -57,6 +60,7 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
