--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
 
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
