[ADD] 비밀번호 변경 Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,13 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.mypage.SecondMyPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.main.home.ChangePwActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.main.home.MyPageActivity"
+            android:name=".ui.mypage.MyPageActivity"
             android:exported="false" />
         <activity
             android:name=".ui.registration.RegisterNameIdActivity"
