[CHORE] xml 수정 및 파일 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
-            android:name=".ui.main.home.ChangePwActivity"
+            android:name=".ui.mypage.ChangePwActivity"
             android:exported="false" />
         <activity
             android:name=".ui.mypage.MyPageActivity"
