--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity
             android:name=".ui.registration.RegisterActivity"
             android:exported="false"
+            android:noHistory = "true"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.SeeMeet.NoActionBar" />
         <activity
