--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,9 @@ dependencies {
     //kakao
     implementation "com.kakao.sdk:v2-user:2.8.6" // 카카오 로그인
 
+    // okhttp
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
+
 }
