--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.4' // oss licenses plugin 추가
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
